@@ -1,3 +1,10 @@
+2016-02-23  Oliver Lemke  <olemke@core-dump.info>
+
+	* environment.yml:
+
+	Added dependency file for easy environment creation with
+	'conda env create'.
+
 2016-02-23  Lukas Kluft <lukas.kluft@gmail.com>
 
 	* doc/modules.rst: Added plots to list of modules.
